bundle/manifests/alibaba-cloud-csi-operator-allow-metrics-traffic_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: alibaba-cloud-csi-operator
  name: alibaba-cloud-csi-operator-allow-metrics-traffic
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          metrics: enabled
    ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alibaba-cloud-csi-operator
      control-plane: controller-manager
  policyTypes:
  - Ingress
