bundle/manifests/alibaba-cloud-csi-operator-deny-default-ingress_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: alibaba-cloud-csi-operator
  name: alibaba-cloud-csi-operator-deny-default-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
